--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 								<h2>About Me</h2>
 							</header>
 
-							<p align="left">Since 2016 I have been programming projects that range in size, aiming to learn as much as I can about the area if computer games programming as I can. Since then I have worked at a local games company, Curioso Games, completed multiple games jams, started, and completed the first year of, a computer games programming course at Staffordshire University, and much more. </br> </br>
+							<p align="left">Since 2016 I have been programming projects that range in area and scope, aiming to learn as much as I can about the area if computer games programming as I can. Since then I have worked at a local games company, Curioso Games, completed multiple games jams, started, and completed the first year of, a computer games programming course at Staffordshire University, and much more. </br> </br>
 									Currently, I am a second year student that is looking into more areas than I have before, with the aim to continue to challenge myself with periodically more difficult projects, improving my programming and problem solving skills through this process. Furthermore, as part of this year I am to be looking for placements for the next year, which would help me gain the confidence and experience required to work in a larger company.</br></br>
 									The overall goal of learning and improving within this area is to increase my employablity, and as a result of this, result in securing a dream job in industry.  
 							</p>
