--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
 							</header>
 
 							<p align="left">Since 2016 I have been programming projects that range in area and scope, aiming to learn as much as I can about the area of computer games programming as I can. Since starting, I have worked at a local games company, Curioso Games, completed multiple games jams, started, and completed the first year of, a computer games programming course at Staffordshire University. As well as much more, including learning how to program projects soley within within C++. </br> </br>
-									Currently, I am a second year student that is looking into more areas than I have before, with the aim to continue to challenge myself with periodically more difficult projects, improving my programming and problem solving skills through this process. Furthermore, as part of this year I am to be looking for placements for the next year, which would help me gain the confidence and experience required to work in a larger company.</br></br>
-									The overall goal of learning and improving within this area is to increase my employablity, and as a result of this, result in securing a dream job in industry.  
+									Currently, I am a second year student that is looking into more areas than I have before, with the aim to continue to challenge myself with periodically more difficult projects, improving my programming and problem solving skills through. As well as part of this year I am to be looking for placements for the next year, which would help me gain the confidence and experience required to work in a full time role in a larger company.</br></br>
+									The overall goal of this portfolio is to demonstrate both my professional quality work, as well as providing a timeline of my improvement throughout the years.
 							</p>
 
 						</div>
