--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -35,10 +35,11 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Dropdown</a>
+									<a href="#">Games</a>
 									<ul>
 										<li><a href="#Marbles">Lost My Marbles</a></li>
 										<li><a href="#Rituals">Rituals: Book Of Skog</a></li>
+										<li><a href="#Spitfire">Rise Of The Spitfire</a></li>
 									</ul>
 								</li>
 							</ul>
@@ -54,7 +55,7 @@
 							<header>
 								<h3><a href="#">Lost My Marbles</a></h3>
 							</header>
-							<p>First Professionally Developed Game.</p>
+							<p>Match Four Type Marble Game.</p>
 						</article>
 						
 						<article>
@@ -62,12 +63,20 @@
 							<header>
 								<h3><a href="#">Rituals: Book Of Skog</a></h3>
 							</header>
-							<p>Follow-up To My First Professionally Developed Game.</p>
+							<p>Horror Puzzle Match Four Game.</p>
+						</article>
+						
+						<article>
+							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+							<header>
+								<h3><a href="#">Rise Of The Spitfire</a></h3>
+							</header>
+							<p>Game Jam Winning Project Converted Into A Commercially Released Game.</p>
 						</article>
 					</div>
 				</section>
 
-			<!-- Main -->
+			<!-- Marbles -->
 				<div id = "Marbles" class="wrapper style2">
 
 					<article id="main" class="container special">
@@ -96,7 +105,7 @@
 
 				</div>
 
-			<!-- Main -->
+			<!-- Rituals -->
 				<div class="wrapper style2">
 
 					<article id="Rituals" class="container special">
@@ -124,6 +133,36 @@
 					</article>
 
 				</div>
+			
+			<!-- Rise Of The Spitfire -->
+				<div id = "Spitfire" class="wrapper style2">
+
+					<article id="main" class="container special">
+						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+						<header>
+							<h2><a href="#">Rise Of The Spitfire</a></h2>
+							<p>
+								Sociis aenean eu aenean mollis mollis facilisis primis ornare penatibus aenean. Cursus ac enim
+								pulvinar curabitur morbi convallis. Lectus malesuada sed fermentum dolore amet.
+							</p>
+						</header>
+						<p>
+							Commodo id natoque malesuada sollicitudin elit suscipit. Curae suspendisse mauris posuere accumsan massa
+							posuere lacus convallis tellus interdum. Amet nullam fringilla nibh nulla convallis ut venenatis purus
+							sit arcu sociis. Nunc fermentum adipiscing tempor cursus nascetur adipiscing adipiscing. Primis aliquam
+							mus lacinia lobortis phasellus suscipit. Fermentum lobortis non tristique ante proin sociis accumsan
+							lobortis. Auctor etiam porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum
+							consequat integer interdum integer purus sapien. Nibh eleifend nulla nascetur pharetra commodo mi augue
+							interdum tellus. Ornare cursus augue feugiat sodales velit lorem. Semper elementum ullamcorper lacinia
+							natoque aenean scelerisque.
+						</p>
+						<footer>
+							<a href="#" class="button">Link To Download Page</a>
+						</footer>
+					</article>
+
+				</div>
+
 
 			<!-- Footer -->
 				<div id="footer">
@@ -147,7 +186,7 @@
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>Brandon Roberts</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 										</ul>
 									</div>
 
