--- a/Game Jams/index.html
+++ b/Game Jams/index.html
@@ -62,7 +62,7 @@
 					<div class="reel">
 
 						<article>
-							<a href="https://player-two.itch.io/unstable-abel" class="image featured"><img src="images/UnstableAbel.png" alt="Unstable Abel" /></a>
+							<a href="https://player-two.itch.io/unstable-abel" class="image featured"><img src="images/CI.png" alt="Unstable Abel" /></a>
 							<header>
 								<h3><a href="#">Unstable Abel</a></h3>
 							</header>
