--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 								<h2 class="alt"> Brandon Roberts</h2>
 								<p>
 									Welcome to my portfolio! </br> 
-									This portfolio contains the main projects I have developed so far, all split into different sub sections.</br>
-									Clicking / Tapping on any of the icons below takes you to a sub-website that is soley focused on that one section.</br>
-									Each sub-website contains a list of games developed, along with some details on how they were developed and what they were for.</br> 
+									This website contains the main projects I have developed in my career so far, split into different sub types.</br>
+									Clicking / tapping on any of the icons below takes you to a sub-website that is soley focused on that one section.</br>
+									Each sub-website contains a list of games developed, along with some details on how they were developed and what they were for, along with a link to where you can see the game in action/download the game.</br> 
 									At the bottom of the page there is an 'about me' section which details an overview of my background in computer games programming, along with general information about me.
 								</p>
 							</header>
@@ -138,7 +138,7 @@
 								<h2>About Me</h2>
 							</header>
 
-							<p align="left">Since 2016 I have been programming projects that range in target area and scope, aiming to learn as much as I can about the area of computer games programming as I can. Since starting, I have worked at a local games company, Curioso Games, for seven months, completed multiple games jams, started, and completed the first year of a computer games programming course at Staffordshire University. As well as much more, including learning how to program projects soley within within C++. </br> </br>
+							<p align="left">Since 2016 I have been programming projects that range in target area and scope, aiming to learn as much as I can about the area of computer games programming as a whole. Since starting, I have worked at a local games company, Curioso Games, for seven months, completed multiple games jams, started on the second year of a computer games programming course at Staffordshire University. As well as much more, including learning the graphics APIs of OpenGL and DirectX. </br> </br>
 									Currently, I am a second year student that is looking into more areas than I have before, with the aim to continue to challenge myself with periodically more difficult projects, improving my programming and problem solving skills through. As well as part of this year I am to be looking for placements for the next year, which would help me gain the confidence and experience required to work in a full time role in a larger company.</br></br>
 									The overall goal of this portfolio is to demonstrate both my professional quality work, found under 'Professional Work', as well as providing a timeline of my improvement throughout the years.
 							</p>
