--- a/index.html
+++ b/index.html
@@ -59,9 +59,12 @@
 							<header>
 								<h2 class="alt"> Brandon Roberts</h2>
 								<p>
-									Welcome to my portfolio! </br> 
-									I am a second year computer games programming student, and this website is to act as a container for the main projects I have developed in my career so far. Each sub section split into a seperate sub website.</br>
-									Clicking / tapping on any of the icons below takes you to the website that soley focuses on that one project area.</br>
+									Welcome to my portfolio! 
+								</br> 
+									I am a second year computer games programming student, and this website is to act as a container for the main projects I have developed in my career so far. Each sub section split into a seperate sub website.
+							</br>
+									Clicking / tapping on any of the icons below takes you to the website that soley focuses on that one project area.
+						</br>
 									Each sub-website contains a list of games developed, along with some details on how they were developed and what they were for, along with a link to where you can see the game in action/download the game.</br> 
 								</p>
 							</header>
