--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -25,9 +25,6 @@
 								<hr />
 								<p>Projects Developed Whilst Working Professionally</p>
 							</header>
-							<footer>
-								<a href="#banner" class="button circled scrolly">Start</a>
-							</footer>
 						</div>
 
 					<!-- Nav -->
@@ -53,7 +50,7 @@
 						<article>
 							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Lost My Marbles</a></h3>
+								<h3><a href"https://play.google.com/store/apps/details?id=com.petern.lostmarbles&hl=en_GB&gl=US">Lost My Marbles</a></h3>
 							</header>
 							<p>Match Four Type Marble Game.</p>
 						</article>
@@ -61,7 +58,7 @@
 						<article>
 							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Rituals: Book Of Skog</a></h3>
+								<h3><a href="https://play.google.com/store/apps/details?id=com.Curioso.RitualsMatch3&hl=en_GB&gl=US">Rituals: Book Of Skog</a></h3>
 							</header>
 							<p>Horror Puzzle Match Four Game.</p>
 						</article>
@@ -69,7 +66,7 @@
 						<article>
 							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Rise Of The Spitfire</a></h3>
+								<h3><a href="https://player-two.itch.io/rise-of-the-spitfire">Rise Of The Spitfire</a></h3>
 							</header>
 							<p>Game Jam Winning Project Converted Into A Commercially Released Game.</p>
 						</article>
