--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -30,7 +30,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="index.html">Home</a></li>
+								<li><a href="https://brandonmjroberts.github.io/#top">Home</a></li>
 								<li>
 									<a href="#">Games</a>
 									<ul>
@@ -48,7 +48,7 @@
 					<div class="reel">
 
 						<article>
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/Marbles.png" alt="" /></a>
 							<header>
 								<h3><a href"https://play.google.com/store/apps/details?id=com.petern.lostmarbles&hl=en_GB&gl=US">Lost My Marbles</a></h3>
 							</header>
@@ -56,7 +56,7 @@
 						</article>
 						
 						<article>
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/Rituals Image.png" alt="" /></a>
 							<header>
 								<h3><a href="https://play.google.com/store/apps/details?id=com.Curioso.RitualsMatch3&hl=en_GB&gl=US">Rituals: Book Of Skog</a></h3>
 							</header>
@@ -64,11 +64,11 @@
 						</article>
 						
 						<article>
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/Rise Of The Spitfire.png" alt="" /></a>
 							<header>
 								<h3><a href="https://player-two.itch.io/rise-of-the-spitfire">Rise Of The Spitfire</a></h3>
 							</header>
-							<p>Game Jam Winning Project Converted Into A Commercially Released Game.</p>
+							<p>Game Jam Winning Project.</p>
 						</article>
 					</div>
 				</section>
