--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Professionally Developed Projects</a></h1>
+								<h1><a id="logo">Professionally Developed Projects</a></h1>
 								<hr />
 								<p>Projects Developed Whilst Working Professionally</p>
 							</header>
