--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -48,7 +48,7 @@
 					<div class="reel">
 
 						<article>
-							<a href="#" class="image featured"><img src="images/Marbles.png" alt="" /></a>
+							<a class="image featured"><img src="images/Marbles.png" alt="" /></a>
 							<header>
 								<h3><a href"https://play.google.com/store/apps/details?id=com.petern.lostmarbles&hl=en_GB&gl=US">Lost My Marbles</a></h3>
 							</header>
@@ -56,7 +56,7 @@
 						</article>
 						
 						<article>
-							<a href="#" class="image featured"><img src="images/Rituals Image.png" alt="" /></a>
+							<a class="image featured"><img src="images/Rituals Image.png" alt="" /></a>
 							<header>
 								<h3><a href="https://play.google.com/store/apps/details?id=com.Curioso.RitualsMatch3&hl=en_GB&gl=US">Rituals: Book Of Skog</a></h3>
 							</header>
@@ -64,7 +64,7 @@
 						</article>
 						
 						<article>
-							<a href="#" class="image featured"><img src="images/Rise Of The Spitfire.png" alt="" /></a>
+							<a class="image featured"><img src="images/Rise Of The Spitfire.png" alt="" /></a>
 							<header>
 								<h3><a href="https://player-two.itch.io/rise-of-the-spitfire">Rise Of The Spitfire</a></h3>
 							</header>
@@ -77,9 +77,9 @@
 				<div id = "Marbles" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+						<a href="https://play.google.com/store/apps/details?id=com.petern.lostmarbles&hl=en_GB&gl=US" class="image featured"><img src="images/Marbles.png" alt="Lost My Marbles Logo Image" /></a>
 						<header>
-							<h2><a href="#">Lost My Marbles</a></h2>
+							<h2><a href="https://play.google.com/store/apps/details?id=com.petern.lostmarbles&hl=en_GB&gl=US">Lost My Marbles</a></h2>
 							<p>
 								Sociis aenean eu aenean mollis mollis facilisis primis ornare penatibus aenean. Cursus ac enim
 								pulvinar curabitur morbi convallis. Lectus malesuada sed fermentum dolore amet.
@@ -96,7 +96,7 @@
 							natoque aenean scelerisque.
 						</p>
 						<footer>
-							<a href="#" class="button">Link To Download Page</a>
+							<a href"https://play.google.com/store/apps/details?id=com.petern.lostmarbles&hl=en_GB&gl=US" class="button">Link To Download Page</a>
 						</footer>
 					</article>
 
@@ -106,9 +106,9 @@
 				<div class="wrapper style2">
 
 					<article id="Rituals" class="container special">
-						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+						<a href="https://play.google.com/store/apps/details?id=com.Curioso.RitualsMatch3&hl=en_GB&gl=US" class="image featured"><img src="images/Rituals Image.png" alt="" /></a>
 						<header>
-							<h2><a href="#">Rituals: Book Of Skog</a></h2>
+							<h2><a href="https://play.google.com/store/apps/details?id=com.Curioso.RitualsMatch3&hl=en_GB&gl=US">Rituals: Book Of Skog</a></h2>
 							<p>
 								Sociis aenean eu aenean mollis mollis facilisis primis ornare penatibus aenean. Cursus ac enim
 								pulvinar curabitur morbi convallis. Lectus malesuada sed fermentum dolore amet.
@@ -125,7 +125,7 @@
 							natoque aenean scelerisque.
 						</p>
 						<footer>
-							<a href="#" class="button">Link To Download Page</a>
+							<a href="https://play.google.com/store/apps/details?id=com.Curioso.RitualsMatch3&hl=en_GB&gl=US" class="button">Link To Download Page</a>
 						</footer>
 					</article>
 
@@ -135,9 +135,9 @@
 				<div id = "Spitfire" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+						<a href="https://player-two.itch.io/rise-of-the-spitfire" class="image featured"><img src="images/Rise Of The Spitfire.png" alt="" /></a>
 						<header>
-							<h2><a href="#">Rise Of The Spitfire</a></h2>
+							<h2><a href="https://player-two.itch.io/rise-of-the-spitfire">Rise Of The Spitfire</a></h2>
 							<p>
 								Sociis aenean eu aenean mollis mollis facilisis primis ornare penatibus aenean. Cursus ac enim
 								pulvinar curabitur morbi convallis. Lectus malesuada sed fermentum dolore amet.
@@ -154,7 +154,7 @@
 							natoque aenean scelerisque.
 						</p>
 						<footer>
-							<a href="#" class="button">Link To Download Page</a>
+							<a href="https://player-two.itch.io/rise-of-the-spitfire" class="button">Link To Download Page</a>
 						</footer>
 					</article>
 
