--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -77,7 +77,7 @@
 				<div id = "Marbles" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="https://play.google.com/store/apps/details?id=com.petern.lostmarbles&hl=en_GB&gl=US" class="image featured"><img src="images/Marbles.png" alt="Lost My Marbles Logo Image" /></a>
+						<a href="https://play.google.com/store/apps/details?id=com.petern.lostmarbles&hl=en_GB&gl=US" class="image centered"><img src="images/Marbles.png" alt="Lost My Marbles Logo Image" /></a>
 						<header>
 							<h2><a href="https://play.google.com/store/apps/details?id=com.petern.lostmarbles&hl=en_GB&gl=US">Lost My Marbles</a></h2>
 							<p>
@@ -106,7 +106,7 @@
 				<div class="wrapper style2">
 
 					<article id="Rituals" class="container special">
-						<a href="https://play.google.com/store/apps/details?id=com.Curioso.RitualsMatch3&hl=en_GB&gl=US" class="image featured"><img src="images/Rituals Image.png" alt="" /></a>
+						<a href="https://play.google.com/store/apps/details?id=com.Curioso.RitualsMatch3&hl=en_GB&gl=US" class="image centered"><img src="images/Rituals Image.png" alt="Rituals Logo Image" /></a>
 						<header>
 							<h2><a href="https://play.google.com/store/apps/details?id=com.Curioso.RitualsMatch3&hl=en_GB&gl=US">Rituals: Book Of Skog</a></h2>
 							<p>
@@ -135,7 +135,7 @@
 				<div id = "Spitfire" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="https://player-two.itch.io/rise-of-the-spitfire" class="image featured"><img src="images/Rise Of The Spitfire.png" alt="" /></a>
+						<a href="https://player-two.itch.io/rise-of-the-spitfire" class="image centered"><img src="images/Rise Of The Spitfire.png" alt="" /></a>
 						<header>
 							<h2><a href="https://player-two.itch.io/rise-of-the-spitfire">Rise Of The Spitfire</a></h2>
 							<p>
