--- a/First Year/index.html
+++ b/First Year/index.html
@@ -21,19 +21,16 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">First Year Projects</a></h1>
+								<h1><a id="logo">First Year Projects</a></h1>
 								<hr />
 								<p>A Sub-Website Containing All My First Year Projects</p>
 							</header>
-							<footer>
-								<a href="#banner" class="button circled scrolly">Projects</a>
-							</footer>
 						</div>
 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="index.html">Home</a></li>
+								<li><a href="https://brandonmjroberts.github.io/#portfolio">Home</a></li>
 								<li>
 									<a href="#">Projects</a>
 									<ul>
@@ -44,7 +41,6 @@
 								</li>
 							</ul>
 						</nav>
-
 				</div>
 			
 			<!-- Carousel -->
@@ -52,7 +48,7 @@
 					<div class="reel">
 
 						<article>
-							<a href="#Mario" class="image featured"><img src="images/Super Mario Bros 3 Image.png" alt="" /></a>
+							<a href="#Mario" class="image featured"><img src="images/Super Mario Bros 3 Image.png" alt="Mario Bros 3 Demo Image" /></a>
 							<header>
 								<h3><a href="#">Super Mario Bros 3</a></h3>
 							</header>
@@ -60,7 +56,7 @@
 						</article>
 						
 						<article>
-							<a href="#Pacman" class="image featured"><img src="images/pacmanImage.png" alt="" /></a>
+							<a href="#Pacman" class="image featured"><img src="images/pacmanImage.png" alt="Pacman Demo Image" /></a>
 							<header>
 								<h3><a href="#">Pacman</a></h3>
 							</header>
@@ -68,11 +64,11 @@
 						</article>
 						
 						<article>
-							<a href="#OpenGL" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+							<a href="#OpenGL" class="image featured"><img src="images/pic01.jpg" alt="OpenGL Boat Project Image" /></a>
 							<header>
 								<h3><a href="#">OpenGL Boat Project</a></h3>
 							</header>
-							<p>First Project Developed In OpenGL.</p>
+							<p>First Game Project Developed In OpenGL.</p>
 						</article>
 
 					</div>
@@ -82,7 +78,7 @@
 				<div id = "Mario" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="#" class="image featured"><img src="images/.png" alt="" /></a>
+						<a href="#" class="image centered"><img src="images/Super Mario Bros 3 Image.png" alt="" /></a>
 						<header>
 							<h2><a href="#">Super Mario Bros 3</a></h2>
 							<p>
@@ -107,7 +103,7 @@
 				<div id = "Pacman" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="#" class="image featured"><img src="images/.png" alt="" /></a>
+						<a href="#" class="image centered"><img src="images/pacmanImage.png" alt="" /></a>
 						<header>
 							<h2><a href="#">Pacman</a></h2>
 							<p>
@@ -133,7 +129,7 @@
 				<div id = "OpenGL" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="#" class="image featured"><img src="images/.jpg" alt="" /></a>
+						<a href="#" class="image centered"><img src="images/.jpg" alt="" /></a>
 						<header>
 							<h2><a href="#">OpenGL Boat Project</a></h2>
 							<p>
@@ -143,7 +139,7 @@
 						<p>
 							For the second semester we had a module teaching the basics of the fixed function pipeline of OpenGL. 
 							Through this module we learnt the basics of the graphics pipeline, rendering objects to the screen, and texturing them. However, during this time I was looking into how to work with shaders within the more modern versions of OpenGL.
-							And therefore I decided to work on a submission that used shaders entirely written by me. This was partly to hit the 'advanced' section of the mark scheme, but it was mainly as an opportunity to put some of the research I had condcted into practice in a time limited task.
+							And, therefore, I decided to work on a submission that used shaders entirely written by me. This was partly to hit the 'advanced' section of the mark scheme, but it was mainly as an opportunity to put some of the research I had condcted into practice in a time limited task.
 							Overall the visuals of the submission were not great, but everything demonstrated in the project was handwritten by me and is running using custom OpenGL shaders.
 						</p>
 						<footer>
