--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -48,7 +48,7 @@
 					<div class="reel">
 
 						<article>
-							<a class="image featured"><img src="images/Marbles.png" alt="" /></a>
+							<a href="#Marbles" class="image featured"><img src="images/Marbles.png" alt="" /></a>
 							<header>
 								<h3><a href"https://play.google.com/store/apps/details?id=com.petern.lostmarbles&hl=en_GB&gl=US">Lost My Marbles</a></h3>
 							</header>
@@ -56,7 +56,7 @@
 						</article>
 						
 						<article>
-							<a class="image featured"><img src="images/Rituals Image.png" alt="" /></a>
+							<a href="#Rituals" class="image featured"><img src="images/Rituals Image.png" alt="" /></a>
 							<header>
 								<h3><a href="https://play.google.com/store/apps/details?id=com.Curioso.RitualsMatch3&hl=en_GB&gl=US">Rituals: Book Of Skog</a></h3>
 							</header>
@@ -64,7 +64,7 @@
 						</article>
 						
 						<article>
-							<a class="image featured"><img src="images/Rise Of The Spitfire.png" alt="" /></a>
+							<a href="#Spitfire" class="image featured"><img src="images/Rise Of The Spitfire.png" alt="" /></a>
 							<header>
 								<h3><a href="https://player-two.itch.io/rise-of-the-spitfire">Rise Of The Spitfire</a></h3>
 							</header>
