--- a/First Year/index.html
+++ b/First Year/index.html
@@ -32,7 +32,7 @@
 							<ul>
 								<li><a href="https://brandonmjroberts.github.io/#portfolio">Home</a></li>
 								<li>
-									<a href="#">Projects</a>
+									<a>Projects</a>
 									<ul>
 										<li><a href="#Mario">Super Mario Bros 3</a></li>
 										<li><a href="#Pacman">Pacman</a></li>
