--- a/Game Jams/index.html
+++ b/Game Jams/index.html
@@ -25,17 +25,14 @@
 								<hr />
 								<p>Collection of game jam projects</p>
 							</header>
-							<footer>
-								<a href="#banner" class="button circled scrolly">Projects</a>
-							</footer>
 						</div>
 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="index.html">Home</a></li>
+								<li><a href="https://brandonmjroberts.github.io/#portfolio">Home</a></li>
 								<li>
-									<a href="#">Projects</a>
+									<a>Projects</a>
 									<ul>
 										<li><a href="#UnstableAbel">Unstable Abel</a></li>
 										<li><a href="#spitfire">Rise Of The Spitfire</a></li>
@@ -62,35 +59,35 @@
 					<div class="reel">
 
 						<article>
-							<a href="https://player-two.itch.io/unstable-abel" class="image featured"><img src="images/CI.png" alt="Unstable Abel" /></a>
+							<a href="#UnstableAbel" class="image featured"><img src="images/CI.png" alt="Unstable Abel" /></a>
 							<header>
-								<h3><a href="#">Unstable Abel</a></h3>
+								<h3><a href="https://player-two.itch.io/unstable-abel">Unstable Abel</a></h3>
 							</header>
 							<p>Ludum Dare 49 entry.</p>
 						</article>
 						
 						<article>
-							<a href="https://player-two.itch.io/rise-of-the-spitfire" class="image featured"><img src="images/Rise Of The Spitfire.png" alt="Spitfire Game" /></a>
+							<a href="#spitfire" class="image featured"><img src="images/Rise Of The Spitfire.png" alt="Spitfire Game" /></a>
 							<header>
-								<h3><a href="#">Rise Of The Spitfire</a></h3>
+								<h3><a href="https://player-two.itch.io/rise-of-the-spitfire">Rise Of The Spitfire</a></h3>
 							</header>
-							<p>Overall winner of the June 2021 Stoke-On-Trend Game Jam.</p>
+							<p>June 2021 Stoke-On-Trend Game Jam Winner.</p>
 						</article>
 
 						<article>
-							<a href="https://player-two.itch.io/long-live-the-king" class="image featured"><img src="images/LLTK.png" alt="" /></a>
+							<a href="LLTK" class="image featured"><img src="images/LLTK.png" alt="" /></a>
 							<header>
-								<h3><a href="#">Long Live The King</a></h3>
+								<h3><a href="https://player-two.itch.io/long-live-the-king">Long Live The King</a></h3>
 							</header>
-							<p>Devloped for Ludum Dare 43.</p>
+							<p>Ludum Dare 43 Entry.</p>
 						</article>
 
 						<article>
-							<a href="https://player-two.itch.io/zombie-escape" class="image featured"><img src="images/Zomebie Escape.jpg" alt="" /></a>
+							<a href="#zombie" class="image featured"><img src="images/Zomebie Escape.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Zombie Escape</a></h3>
+								<h3><a href="https://player-two.itch.io/zombie-escape">Zombie Escape</a></h3>
 							</header>
-							<p>First Ever Game Jam - Developed for Ludum Dare 42.</p>
+							<p>First Ever Game Jam : Ludum Dare 42</p>
 						</article>
 					</div>
 				</section>
@@ -99,9 +96,9 @@
 				<div id = "UnstableAbel" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+						<a href="https://player-two.itch.io/unstable-abel" class="image featured"><img src="images/CI.png" alt="" /></a>
 						<header>
-							<h2><a href="#">Unstable Abel</a></h2>
+							<h2><a href="https://player-two.itch.io/unstable-abel">Unstable Abel</a></h2>
 							<p>
 								filler
 							</p>
@@ -120,9 +117,9 @@
 				<div id = "spitfire" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+						<a href="https://player-two.itch.io/rise-of-the-spitfire" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 						<header>
-							<h2><a href="#">Rise Of The Spitfire</a></h2>
+							<h2><a href="https://player-two.itch.io/rise-of-the-spitfire">Rise Of The Spitfire</a></h2>
 							<p>
 								As an end to the first year, my university organised a week long game jam in conjunction with the Stoke BID, putting forward seven themes in total for the jam. 
 							</p>
@@ -147,9 +144,9 @@
 			<div id = "LLTK" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+						<a href="https://player-two.itch.io/long-live-the-king" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 						<header>
-							<h2><a href="#">Long Live The King</a></h2>
+							<h2><a href="https://player-two.itch.io/long-live-the-king">Long Live The King</a></h2>
 							<p>
 								For the Ludum Dare 43 I worked in a small team of 2 to develop a Lemmings-esk puzzle platformer based around moving multiple screens. The theme for this project was 'Sacrifices Must Be Made.'
 							</p>
@@ -168,9 +165,9 @@
 			<div id = "zombie"  class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+						<a href="https://player-two.itch.io/zombie-escape" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 						<header>
-							<h2><a href="#">Zombie Escape</a></h2>
+							<h2><a href="https://player-two.itch.io/zombie-escape">Zombie Escape</a></h2>
 							<p>
 								For my first 48 hour game jam I worked in a small team to create a game based around the theme of 'Running Out Of Space.' 
 							</p>
