--- a/Game Jams/index.html
+++ b/Game Jams/index.html
@@ -96,7 +96,7 @@
 				<div id = "UnstableAbel" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="https://player-two.itch.io/unstable-abel" class="image featured"><img src="images/CI.png" alt="" /></a>
+						<a href="https://player-two.itch.io/unstable-abel" class="image centered"><img src="images/CI.png" alt="" /></a>
 						<header>
 							<h2><a href="https://player-two.itch.io/unstable-abel">Unstable Abel</a></h2>
 							<p>
@@ -117,7 +117,7 @@
 				<div id = "spitfire" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="https://player-two.itch.io/rise-of-the-spitfire" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+						<a href="https://player-two.itch.io/rise-of-the-spitfire" class="image centered"><img src="images/Rise Of The Spitfire.png" alt="" /></a>
 						<header>
 							<h2><a href="https://player-two.itch.io/rise-of-the-spitfire">Rise Of The Spitfire</a></h2>
 							<p>
@@ -144,7 +144,7 @@
 			<div id = "LLTK" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="https://player-two.itch.io/long-live-the-king" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+						<a href="https://player-two.itch.io/long-live-the-king" class="image centered"><img src="images/pic06.jpg" alt="" /></a>
 						<header>
 							<h2><a href="https://player-two.itch.io/long-live-the-king">Long Live The King</a></h2>
 							<p>
@@ -165,7 +165,7 @@
 			<div id = "zombie"  class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="https://player-two.itch.io/zombie-escape" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+						<a href="https://player-two.itch.io/zombie-escape" class="image centered"><img src="images/pic06.jpg" alt="" /></a>
 						<header>
 							<h2><a href="https://player-two.itch.io/zombie-escape">Zombie Escape</a></h2>
 							<p>
