--- a/Game Jams/index.html
+++ b/Game Jams/index.html
@@ -104,8 +104,8 @@
 							</p>
 						</header>
 						<p>
-							In this three day game jam game you play as an unstable footed character called Abel. Your goal in controlling Abel is to outrun the zombies chasing him through traffic and an abundance of fences. <\br>
-                                                         This project was developed using the game engine of Unity, and made good use of freely available assets, something we as a team had avoided doing in past jams. What this allowed us to do was to focus specifically on the programming aspect of the jam instead of having to worry about art or music. Whilst still having them available to us. <\br>
+							In this three day game jam game you play as an unstable footed character called Abel. Your goal in controlling Abel is to outrun the zombies chasing him through traffic and an abundance of fences. </br>
+                                                         This project was developed using the game engine of Unity, and made good use of freely available assets, something we as a team had avoided doing in past jams. What this allowed us to do was to focus specifically on the programming aspect of the jam instead of having to worry about art or music. Whilst still having them available to us. </br>
                                                          As this was my fourth game jam I was able to build off prior jam experience, and have time management handled more efficiently, with less stress overall.
 						</p>
 						<footer>
