--- a/index.html
+++ b/index.html
@@ -61,11 +61,9 @@
 								<p>
 									Welcome to my portfolio! 
 								</br> 
-									I am a second year computer games programming student, and this website is to act as a container for the main projects I have developed in my career so far. Each sub section split into a seperate sub website.
-							</br>
-									Clicking / tapping on any of the icons below takes you to the website that soley focuses on that one project area.
-						</br>
-									Each sub-website contains a list of games developed, along with some details on how they were developed and what they were for, along with a link to where you can see the game in action/download the game.</br> 
+									I am a second year computer games programming student at Staffordshire University. </br> 
+						                        This website is to act as a container for the best projects I have developed in each subsection of my career so far. Each sub section is split into a seperate website which detail the main projects developed in that area, along with links to either a demo video of the game playing, or a download page for the game.</br>
+									Clicking / tapping on any of the icons below takes you to that sub area's website.</br>				
 								</p>
 							</header>
 						</div>
