--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 								<p>
 									Welcome to my portfolio! 
 								</br> 
-									I am a second year computer games programming student at Staffordshire University. </br> 
-						                        This website is to act as a container for the best projects I have developed in each subsection of my career so far. Each sub section is split into a seperate website which detail the main projects developed in that area, along with links to either a demo video of the game playing, or a download page for the game.</br>
+									I am a second year computer games programming student studying at Staffordshire University. </br> 
+						                        This website is to act as a container for the best projects I have developed in each subsection of my career so far. Each sub section is split into a seperate website which details the main projects developed in that area, along with links to either a demo video of the game playing, or a download page for the game.</br>
 									Clicking / tapping on any of the icons below takes you to that sub area's website.</br>				
 								</p>
 							</header>
