--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -81,8 +81,7 @@
 						<header>
 							<h2><a href="https://play.google.com/store/apps/details?id=com.petern.lostmarbles&hl=en_GB&gl=US">Lost My Marbles</a></h2>
 							<p>
-								Sociis aenean eu aenean mollis mollis facilisis primis ornare penatibus aenean. Cursus ac enim
-								pulvinar curabitur morbi convallis. Lectus malesuada sed fermentum dolore amet.
+								My first professionally developed project, developed during my time working for Curioso Games, between my first and second year of A-Levels. 
 							</p>
 						</header>
 						<p>
@@ -110,8 +109,7 @@
 						<header>
 							<h2><a href="https://play.google.com/store/apps/details?id=com.Curioso.RitualsMatch3&hl=en_GB&gl=US">Rituals: Book Of Skog</a></h2>
 							<p>
-								Sociis aenean eu aenean mollis mollis facilisis primis ornare penatibus aenean. Cursus ac enim
-								pulvinar curabitur morbi convallis. Lectus malesuada sed fermentum dolore amet.
+								My second professionally developed game. The game developed immediatly after Lost My Marbles, whilst I was still working for Curioso Games in 2019.
 							</p>
 						</header>
 						<p>
@@ -139,8 +137,7 @@
 						<header>
 							<h2><a href="https://player-two.itch.io/rise-of-the-spitfire">Rise Of The Spitfire</a></h2>
 							<p>
-								Sociis aenean eu aenean mollis mollis facilisis primis ornare penatibus aenean. Cursus ac enim
-								pulvinar curabitur morbi convallis. Lectus malesuada sed fermentum dolore amet.
+								After winning the 'Stoke On Trend' game jam, we were invited to continue working on the game and convert the prototype into a fully complete released game. 
 							</p>
 						</header>
 						<p>
