--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -109,7 +109,7 @@
 						<header>
 							<h2><a href="https://play.google.com/store/apps/details?id=com.Curioso.RitualsMatch3&hl=en_GB&gl=US">Rituals: Book Of Skog</a></h2>
 							<p>
-								My second professionally developed game. The game developed immediatly after Lost My Marbles, whilst I was still working for Curioso Games in 2019.
+								My second professionally developed game. Developed immediatly after Lost My Marbles, during my time working for Curioso Games in 2019.
 							</p>
 						</header>
 						<p>
