--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -81,7 +81,7 @@
 						<header>
 							<h2><a href="https://play.google.com/store/apps/details?id=com.petern.lostmarbles&hl=en_GB&gl=US">Lost My Marbles</a></h2>
 							<p>
-								My first professionally developed project, developed during my time working for Curioso Games, between my first and second year of A-Levels. 
+								My first professionally developed project, developed while working for Curioso Games, whilst in the summer between my first and second year of A-Levels. 
 							</p>
 						</header>
 						<p>
