--- a/Game Jams/index.html
+++ b/Game Jams/index.html
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Game Jam Projects</a></h1>
+								<h1><a id="logo">Game Jam Projects</a></h1>
 								<hr />
 								<p>Collection of game jam projects</p>
 							</header>
