--- a/First Year/index.html
+++ b/First Year/index.html
@@ -87,7 +87,8 @@
 						</header>
 						<p>
 							As a submission for my second semester game development module we were tasked with following tutorials on creating the one screen arcade Mario Bros game. 
-							These tutorials explained the process of setting up SDL2, as well as the basics of object orientated programming in C++. I completed these tutorials fairly quickly, so as an extension to this task I decided to expand on the game to include the first world map, and first level of SNES game, Super Mario Bros 3. 
+							These tutorials explained the process of setting up SDL2, as well as the basics of object orientated programming in C++. </br>
+							I completed these tutorials fairly quickly, so as an extension to this task I decided to expand on the game to include the first world map, and first level of SNES game, Super Mario Bros 3. </br>
 							This decision stemmed from me having a fair amount of prior programming experience, and the determination to re-create as much of the original game as I could within the time frame of the semester. 
 							Overall, the visuals and controls for the first world, and the first level were able to be created in the could of months time frame, as is shown in the video link below.
 							The main difficulties I found with this project came from a combination of it being one of my first large scale solo projects undertaken, and the sheer amount of objects, items and systems requred to be put in place to accomidate everything. 
