--- a/First Year/index.html
+++ b/First Year/index.html
@@ -92,7 +92,7 @@
 							This decision stemmed from me having a fair amount of prior programming experience, and the determination to re-create as much of the original game as I could within the time frame of the semester. </br>
 							Overall, the visuals and controls for the first world, and the first level were able to be created in the could of months time frame, as is shown in the video link below.</br>
 							The main difficulties I found with this project came from a combination of it being one of my first large scale solo projects undertaken, and the sheer amount of objects, items and systems requred to be put in place to accomidate everything. 
-							So, in the final submission, the systems to support any number of levels; having any level be any width, height or use any sprite sheet; having very little work required to add new blocks and enemy types and much more was included. 
+							So, in the final submission, the systems to support any number of levels; having any level be any width, height or use any sprite sheet; having very little work required to add new blocks and enemy types and much more was included. </br>
 							However, one of my regrets from this project was not making a level editor. As this forced me to type out all of the individual level data files by hand. Which untimatly caused the biggest bottle kneck to the development process.       
 						</p>
 						<footer>
