--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -77,9 +77,9 @@
 				<div id = "Marbles" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="https://play.google.com/store/apps/details?id=com.petern.lostmarbles&hl=en_GB&gl=US" class="image centered"><img src="images/Marbles.png" alt="Lost My Marbles Logo Image" /></a>
+						<a href="https://youtu.be/Crk5be9rgP4" class="image centered"><img src="images/Marbles.png" alt="Lost My Marbles Logo Image" /></a>
 						<header>
-							<h2><a href="https://play.google.com/store/apps/details?id=com.petern.lostmarbles&hl=en_GB&gl=US">Lost My Marbles</a></h2>
+							<h2><a href="https://youtu.be/Crk5be9rgP4">Lost My Marbles</a></h2>
 							<p>
 								My first professionally developed project, developed while working for Curioso Games, whilst in the summer between my first and second year of A-Levels. 
 							</p>
@@ -89,7 +89,7 @@
 					                
 						</p>
 						<footer>
-							<a href="https://play.google.com/store/apps/details?id=com.petern.lostmarbles&hl=en_GB&gl=US" class="button">Link To Download Page</a>
+							<a href="https://youtu.be/Crk5be9rgP4" class="button">Link To Download Page</a>
 						</footer>
 					</article>
 
@@ -132,7 +132,8 @@
 							
 						</p>
 						<footer>
-							<a href="https://player-two.itch.io/rise-of-the-spitfire" class="button">Link To Download Page</a>
+							<a href="https://youtu.be/af4zY-OiqKQ" class="button">Link To Demo Video</a>
+							<a href="https://player-two.itch.io/rise-of-the-spitfire" class="button">Link To Game Download</a>
 						</footer>
 					</article>
 
