--- a/Game Jams/index.html
+++ b/Game Jams/index.html
@@ -157,6 +157,7 @@
 							
 						</p>
 						<footer>
+							<a href="https://youtu.be/OPIzuDejbUo" class="button">Gameplay Demo Video</a>
 							<a href="https://player-two.itch.io/long-live-the-king" class="button">Download From Itch.io</a>
 						</footer>
 					</article>
