--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -89,7 +89,8 @@
 					                
 						</p>
 						<footer>
-							<a href="https://youtu.be/Crk5be9rgP4" class="button">Link To Download Page</a>
+							<a href="https://youtu.be/Crk5be9rgP4" class="button">Link To Gameplay Video</a>
+							<a href="https://play.google.com/store/apps/details?id=com.petern.lostmarbles&hl=en_GB&gl=US" class="button">Link To Download Page (Google Play Store)</a>
 						</footer>
 					</article>
 
