--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -112,7 +112,8 @@
 							Therefore, my experince of the development of this project was a lot smoother than the previous project.
 						</p>
 						<footer>
-							<a href="https://play.google.com/store/apps/details?id=com.Curioso.RitualsMatch3&hl=en_GB&gl=US" class="button">Link To Download Page</a>
+							<a href="https://play.google.com/store/apps/details?id=com.Curioso.RitualsMatch3&hl=en_GB&gl=US" class="button">Link To Gameplay Video</a>
+							<a href="https://play.google.com/store/apps/details?id=com.Curioso.RitualsMatch3&hl=en_GB&gl=US" class="button">Link To Download Page (Google Play Store)</a>
 						</footer>
 					</article>
 
