--- a/First Year/index.html
+++ b/First Year/index.html
@@ -50,7 +50,7 @@
 						<article>
 							<a href="#Mario" class="image featured"><img src="images/Super Mario Bros 3 Image.png" alt="Mario Bros 3 Demo Image" /></a>
 							<header>
-								<h3><a href="#">Super Mario Bros 3</a></h3>
+								<h3><a href="#Mario">Super Mario Bros 3</a></h3>
 							</header>
 							<p>SNES Super Mario Bros 3 Re-creation.</p>
 						</article>
@@ -58,7 +58,7 @@
 						<article>
 							<a href="#Pacman" class="image featured"><img src="images/pacmanImage.png" alt="Pacman Demo Image" /></a>
 							<header>
-								<h3><a href="#">Pacman</a></h3>
+								<h3><a href="#Pacman">Pacman</a></h3>
 							</header>
 							<p>First Game Project For University.</p>
 						</article>
@@ -66,7 +66,7 @@
 						<article>
 							<a href="#OpenGL" class="image featured"><img src="images/pic01.jpg" alt="OpenGL Boat Project Image" /></a>
 							<header>
-								<h3><a href="#">OpenGL Boat Project</a></h3>
+								<h3><a href="#OpenGL">OpenGL Boat Project</a></h3>
 							</header>
 							<p>First Game Project Developed In OpenGL.</p>
 						</article>
@@ -145,9 +145,6 @@
 							And, therefore, I decided to work on a submission that used shaders entirely written by me. This was partly to hit the 'advanced' section of the mark scheme, but it was mainly as an opportunity to put some of the research I had condcted into practice in a time limited task.
 							Overall the visuals of the submission were not great, but everything demonstrated in the project was handwritten by me and is running using custom OpenGL shaders.
 						</p>
-						<footer>
-							<a href="#" class="button">Link To Video</a>
-						</footer>
 					</article>
 
 				</div>
