--- a/First Year/index.html
+++ b/First Year/index.html
@@ -106,9 +106,9 @@
 				<div id = "Pacman" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="https://youtu.be/X-ezEhZ5CjE" class="image centered"><img src="images/pacmanImage.png" alt="" /></a>
+						<a href="https://youtu.be/C2QQ_cojnxg" class="image centered"><img src="images/pacmanImage.png" alt="" /></a>
 						<header>
-							<h2><a href="https://youtu.be/X-ezEhZ5CjE">Pacman</a></h2>
+							<h2><a href="https://youtu.be/C2QQ_cojnxg">Pacman</a></h2>
 							<p>
 								Re-creation of the iconic arcade game of Pacman, with a variety of level graphics and fully AI ghosts to run from.
 							</p>
@@ -122,7 +122,7 @@
 							This is demonstrated in the video link below, and developing the Pacman AI took me right up to the submission date.
 						</p>
 						<footer>
-							<a href="https://youtu.be/X-ezEhZ5CjE" class="button">Link To Video</a>
+							<a href="https://youtu.be/C2QQ_cojnxg" class="button">Link To Video</a>
 						</footer>
 					</article>
 
