--- a/Game Jams/index.html
+++ b/Game Jams/index.html
@@ -109,6 +109,7 @@
                                                          As this was my fourth game jam I was able to build off prior jam experience, and have time management handled more efficiently, with less stress overall.
 						</p>
 						<footer>
+							<a href="https://player-two.itch.io/unstable-abel" class="button">Gameplay Video</a>
 							<a href="https://player-two.itch.io/unstable-abel" class="button">Download From Itch.io</a>
 						</footer>
 					</article>
@@ -135,6 +136,7 @@
 							During the awards ceremony it was revealed that we had won our category as well as overall, with the main feedback given that people wanted more levels, and that it felt like the 'most complete game in the contest overall.' 
 						</p>
 						<footer>
+							<a href="https://player-two.itch.io/rise-of-the-spitfire" class="button">Gameplay Video</a>
 							<a href="https://player-two.itch.io/rise-of-the-spitfire" class="button">Play On Itch.io</a>
 						</footer>
 					</article>
@@ -182,6 +184,7 @@
 							As a first game jam project the experience was very good, extremely stressful towards the end, but I learnt a lot from the experience that I have applied to more recent projects. 
 						</p>
 						<footer>
+							<a href="https://player-two.itch.io/zombie-escape" class="button">Gameplay Video</a>
 							<a href="https://player-two.itch.io/zombie-escape" class="button">Download From Itch.io</a>
 						</footer>
 					</article>
